# sae-monosemantic

./: .dockerignore  .env.example  .gitignore  Dockerfile  HF_Setup.md  README.MD  TODO.MD  docker-compose.yml  dummy.py  install_dependencies.sh  model_weights_32x.pth  pyproject.toml  runpod_setup_guide-2.md  sae_configs_metadata.json  tech_debt.md  todo.md  training_script.py
.github/workflows/: pr-review.yml
app/: streamlit_app.py
app/backend/: feature_queries.py  hf_connector.py
app/components/: config_selector.py  feature_list.py  feature_view.py
notebooks/: sae_training.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20260210_212358-jdnlsu5o/: run-jdnlsu5o.wandb
notebooks/wandb/run-20260210_212358-jdnlsu5o/files/: wandb-metadata.json
notebooks/wandb/run-20260210_212358-jdnlsu5o/files/media/table/: training_loss_curve_table_0_8bb61d4723f14ab4f96d.table.json
notebooks/wandb/run-20260210_223056-xfirdfn0/: run-xfirdfn0.wandb
notebooks/wandb/run-20260210_223056-xfirdfn0/files/: wandb-metadata.json
notebooks/wandb/run-20260227_164845-c66n14of/files/: wandb-metadata.json
notebooks/wandb/run-20260227_164953-pshjz1ol/files/: requirements.txt  wandb-metadata.json
scripts/: data_downloader.py  extract_activations.py  runpod_setup.sh
src/evaluation/: dead_neuron_viz_dummy.ipynb  feature_analysis.ipynb  feature_visualization.py  interpretability.py  prompts.py
src/models/: gpt2_wrapper.py  spare_autoencoder.py  sparse_autoencoder.py
src/training/: dataset_creator.py  losses.py  trainer.py
wandb/: latest-run
wandb/run-20260210_205456-bzcikm1z/: run-bzcikm1z.wandb
wandb/run-20260210_205456-bzcikm1z/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+6 files in other folders)
