[project]
name = "sae-monosemantic"
version = "0.1.0"
readme = "README.MD"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "duckdb>=1.4.4",
    "hf-xet>=1.2.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.2",
    "transformers>=5.0.0",
    "umap-learn>=0.5.11",
    "wandb>=0.24.1",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
